--- a/client/contact.html
+++ b/client/contact.html
@@ -19,7 +19,7 @@
         </header>
         <main>
             <div class="container">
-                <form action="action_page.php">
+                <form action="/contact" method="post">
               
                   <label for="fname">First Name</label>
                   <input type="text" id="fname" name="firstname" placeholder="Your name..">
